--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/red500"
+        android:background="@color/blueGrey500"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
     <include layout="@layout/view_shadow"/>
