--- a/app/src/main/res/layout/row_forecast.xml
+++ b/app/src/main/res/layout/row_forecast.xml
@@ -1,7 +1,8 @@
 
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="@dimen/default_margin"
+    android:layout_marginBottom="@dimen/default_margin"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
