--- a/app/src/main/res/layout/row_forecast.xml
+++ b/app/src/main/res/layout/row_forecast.xml
@@ -14,7 +14,7 @@
         <TextView
             android:id="@+id/tvDay"
             android:text="@string/placeholder_day"
-            android:textSize="@dimen/text_size_h1"
+            android:textSize="@dimen/text_size_h2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/default_margin"
@@ -22,7 +22,7 @@
 
         <View
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/divider_height"
+            android:layout_height="@dimen/forecast_details_divider_height"
             android:layout_marginLeft="@dimen/default_content_margin"
             android:layout_marginRight="@dimen/default_content_margin"
             android:background="@color/shadow" />
@@ -49,7 +49,7 @@
                 android:layout_centerVertical="true"
                 android:padding="@dimen/default_content_margin"
                 android:text="@string/placeholder_weather"
-                android:textSize="@dimen/text_size_h1"/>
+                android:textSize="@dimen/text_size_h2"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
