--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,11 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="default_margin">4dp</dimen>
     <dimen name="default_content_margin">8dp</dimen>
-    <dimen name="divider_height">1dp</dimen>
+    <dimen name="forecast_details_divider_height">1dp</dimen>
+    <dimen name="forecast_divider_height">2dp</dimen>
     <dimen name="fake_shadow_height">2dp</dimen>
     <dimen name="default_elevation">4dp</dimen>
-    <dimen name="text_size_h1">16sp</dimen>
+
+    <dimen name="text_size_h1">18sp</dimen>
+    <dimen name="text_size_h2">16sp</dimen>
 </resources>
