--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -13,17 +13,28 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:paddingTop="@dimen/activity_vertical_margin">
 
+        <ImageView
+            android:id="@+id/ivLocationBanner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/ignore_activity_margin"
+            android:layout_marginTop="@dimen/ignore_activity_margin"
+            android:layout_marginRight="@dimen/ignore_activity_margin"
+            android:layout_alignParentTop="true"
+            android:scaleType="centerCrop"
+            android:visibility="invisible"/>
 
         <TextView
             android:id="@+id/tvLocationName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:layout_marginTop="@dimen/default_content_margin"
+            android:layout_below="@id/ivLocationBanner"
 
             android:gravity="center"
             android:textSize="@dimen/text_size_h1"
