--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="ignore_activity_margin">-16dp</dimen>
     <dimen name="default_margin">4dp</dimen>
     <dimen name="default_content_margin">8dp</dimen>
     <dimen name="forecast_details_divider_height">1dp</dimen>
@@ -11,4 +12,6 @@
 
     <dimen name="text_size_h1">18sp</dimen>
     <dimen name="text_size_h2">16sp</dimen>
+
+    <dimen name="banner_height">200dp</dimen>
 </resources>
