--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -5,5 +5,9 @@
     <color name="dark_shadow">#A4A4A4</color>
 
     <color name="blueGrey500">#607D8B</color>
+    <color name="blue500">#2196F3</color>
+    <color name="blue700">#1976D2</color>
+    <color name="blue900">#0D47A1</color>
+    <color name="blueA100">#82B1FF</color>
     <color name="white">#FFFFFF</color>
 </resources>
