Added FrameLayout to Banner in preparation for current temp. Fixed some screen rotation and settings bugs.

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,6 +3,7 @@
     <color name="red500">#F44336</color>
     <color name="shadow">#b4b4b4</color>
     <color name="dark_shadow">#A4A4A4</color>
+    <color name="translucent_grey">#A0000000</color>
 
     <color name="blueGrey500">#607D8B</color>
     <color name="blue500">#2196F3</color>
