--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -18,23 +18,52 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <ImageView
-            android:id="@+id/ivLocationBanner"
-            android:layout_width="match_parent"
+        <FrameLayout
+            android:id="@+id/frameBanner"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:foregroundGravity="center"
             android:layout_marginLeft="@dimen/ignore_activity_margin"
             android:layout_marginTop="@dimen/ignore_activity_margin"
-            android:layout_marginRight="@dimen/ignore_activity_margin"
-            android:layout_alignParentTop="true"
-            android:scaleType="centerCrop"
-            android:visibility="invisible"/>
+            android:layout_marginRight="@dimen/ignore_activity_margin">
+
+            <ImageView
+                android:id="@+id/ivLocationBanner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:visibility="gone"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:background="@color/translucent_grey"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvCurrentTemp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:padding="@dimen/default_content_margin"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/white"
+                    android:textIsSelectable="true"
+                    android:textSize="40sp"
+                    android:animateLayoutChanges="true"
+                    android:visibility="gone"/>
+            </LinearLayout>
+        </FrameLayout>
 
         <TextView
             android:id="@+id/tvLocationName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_content_margin"
-            android:layout_below="@id/ivLocationBanner"
+            android:layout_below="@id/frameBanner"
 
             android:gravity="center"
             android:textSize="@dimen/text_size_h1"
