--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -21,7 +21,7 @@
         <FrameLayout
             android:id="@+id/frameBanner"
             android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:foregroundGravity="center"
