--- a/app/src/main/res/layout/row_forecast.xml
+++ b/app/src/main/res/layout/row_forecast.xml
@@ -1,8 +1,11 @@
 
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/forecastViewTop"
     android:layout_marginTop="@dimen/default_margin"
     android:layout_marginBottom="@dimen/default_margin"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
