--- a/app/src/main/res/layout-land/row_forecast.xml
+++ b/app/src/main/res/layout-land/row_forecast.xml
@@ -27,6 +27,7 @@
                 android:gravity="center_horizontal"/>
 
             <View
+                android:id="@+id/viewShadow"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/forecast_details_divider_height"
                 android:layout_marginLeft="@dimen/default_content_margin"
