--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -67,7 +67,9 @@
 
             android:gravity="center"
             android:textSize="@dimen/text_size_h1"
-            android:text="@string/placeholder_city" />
+            android:text="@string/placeholder_city"
+
+            android:visibility="gone"/>
 
         <View
             android:id="@+id/dividerView"
@@ -76,7 +78,9 @@
             android:layout_below="@id/tvLocationName"
             android:layout_marginTop="@dimen/default_content_margin"
             android:layout_marginBottom="@dimen/default_content_margin"
-            android:background="@color/dark_shadow" />
+            android:background="@color/dark_shadow"
+
+            android:visibility="gone"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvForecast"
