--- a/app/src/main/res/layout/view_forecast_detail.xml
+++ b/app/src/main/res/layout/view_forecast_detail.xml
@@ -28,6 +28,7 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/viewShadow"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/forecast_details_divider_height"
         android:layout_marginLeft="@dimen/default_content_margin"
