--- a/app/src/main/res/layout/view_forecast_detail.xml
+++ b/app/src/main/res/layout/view_forecast_detail.xml
@@ -8,7 +8,7 @@
         android:id="@+id/detailHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:padding="@dimen/default_content_margin"
         android:orientation="horizontal">
 
