--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="text_size_h2">16sp</dimen>
 
     <dimen name="banner_height">200dp</dimen>
+    <dimen name="landscape_forecast_width">300dp</dimen>
 </resources>
